--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,8 @@ mybatis.mapper-locations=classpath:static/Mappers/*.xml
 mybatis.config-location=classpath:MybatisConfig.xml
 
 logging.level.com.FinalProject=trace
-
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 #logging.file=spring.log
 ##??????????????????
 #logging.pattern.console=
