--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,9 @@
 		<springboot-thymeleaf.version>3.0.2.RELEASE</springboot-thymeleaf.version>
 		<thymeleaf-layout-dialect.version>2.1.1</thymeleaf-layout-dialect.version>
 	</properties>
+
 	<dependencies>
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -149,6 +151,11 @@
 			<artifactId>pdfbox-tools</artifactId>
 			<version>2.0.28</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>5.3.19</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -159,5 +166,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
 
 </project>
